--- a/reazonspeech.html
+++ b/reazonspeech.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
-    RED.nodes.registerType('pip',{
+    RED.nodes.registerType('reazonspeech',{
         category: 'python',
-        color: '#3e7cad',
+        color: '#ffffff',
         defaults: {
             name: {value:""},
             voicepath: {value:""}
@@ -10,12 +10,12 @@
         outputs: 1,
         icon: "cog.svg",
         label: function() {
-            return this.name||"pip";
+            return this.name||"reazonspeech";
         }
     });
 </script>
 
-<script type="text/html" data-template-name="pip">
+<script type="text/html" data-template-name="reazonspeech">
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name"><br>
@@ -24,6 +24,6 @@
     </div>
 </script>
 
-<script type="text/html" data-help-name="pip">
+<script type="text/html" data-help-name="reazonspeech">
 
 </script>
